--- a/test/css/index-styles.css
+++ b/test/css/index-styles.css
@@ -24,7 +24,7 @@ body {
     position: fixed;
     display: flex;
     top: 0;
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(255, 255, 255);
     width: 100%;
     height: 50px;
     z-index: 2;
@@ -155,8 +155,8 @@ a {
 
 .header-bottom-all {
   width: 100%;
-  height: 800px;
-  background-image: linear-gradient(to right, rgb(241, 241, 241), rgb(201, 201, 201));
+  height: 100%;
+  background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(247, 247, 247));
 
 }
 
@@ -377,14 +377,24 @@ a {
 
 @media (max-width: 750px) {
 
+  .header-bottom {
+    height: 1300px;
+}
+
   .header-slogan {
+    top: 600px;
     width: 750px;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.850), rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.800),rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.750), rgba(255, 255, 255, 0.700), rgba(255, 255, 255, 0.600));
-    padding: 0px 0px 0px 20px;
+    padding: 0px 0px 0px 50px;
   }
 
   .header-image {
-    right: -40px;
+    top: -800px;
+    position: relative;
+    margin: auto;
+    float: none;
+    width: 500px;
+    height: 600px;
   }
 
   .header-slogan-name {
@@ -401,21 +411,78 @@ a {
     line-height: 35px;
   }
 
+
+  .header-image-img {
+    width: 325px;
+    height: 450px;
+    top: 80px;
+    padding-left: 50px;
+  }
+  
+  .header-image-circle-1 {
+    width: 300px;
+    height: 300px;
+    top: 250px;
+    border-radius: 189px;
+  }
+  
+  .header-image-circle-2 {
+    width: 350px;
+    height: 350px;
+    top: 150px;
+    left: 150px;
+    border-radius: 189px;
+  }
+
 }
 
 
 
 @media (max-width: 550px) {
 
+  .header-bottom {
+    height: 1000px;
+}
+
   .header-slogan {
     width: 750px;
+    top: 400px;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.850), rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.800),rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.750), rgba(255, 255, 255, 0.700), rgba(255, 255, 255, 0.600));
     padding: 0px 0px 0px 20px;
   }
 
   .header-image {
-    right: -40px;
+    top: -800px;
+    margin: auto;
+    float: none;
+    width: 350px;
+    height: 450px;
   }
+
+  .header-image-img {
+    width: 250px;
+    height: 350px;
+    top: 30px;
+    padding-left: 5px;
+  }
+  
+  .header-image-circle-1 {
+    width: 200px;
+    height: 200px;
+    top: 200px;
+    border-radius: 189px;
+  }
+  
+  .header-image-circle-2 {
+    width: 250px;
+    height: 250px;
+    top: 110px;
+    left: 100px;
+    border-radius: 189px;
+  }
+
+
+
 
   .header-slogan-name {
     width: 400px;
@@ -886,6 +953,7 @@ a {
   background-size: cover;
   width: 650px;
   height: 450px;
+  box-shadow:  0px 0px 15px rgb(255, 255, 255);
   transition: 0.7s;
   
 }
@@ -1230,6 +1298,7 @@ a {
   padding: 15px;
   color: #0026ff;
   border-bottom: 1px solid black;
+  box-shadow: 0px 5px 5px rgb(211, 211, 211);
 }
 
 
