--- a/test/css/index-styles.css
+++ b/test/css/index-styles.css
@@ -1995,3 +1995,250 @@ a {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+/* ПЯТЫЙ СТЕНД */
+
+
+.fifth-index-all {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #0026ff;
+  overflow: hidden;
+}
+
+.fifth-index-stand {
+  position: relative;
+  display: flex;
+  max-width: 1400px;
+  height: 250px;
+  margin: auto;
+  padding: 75px 0px 75px 0px;
+}
+
+
+.fifth-index-name {
+  position: relative;
+  margin-left: 100px;
+  max-width: 500px;
+  height: 250px;
+  z-index: 1;
+}
+
+.fin-name {
+  position: relative;
+  max-width: 500px;
+  height: 100px;
+  font-size: 55px;
+  font-weight: bold;
+  font-family: IBM Plex Serif;
+  letter-spacing: 3px;
+  color: white;
+}
+
+.fin-content {
+  position: relative;
+  display: flex;
+  width: 450px;
+  height: 150px;
+}
+
+.fin-block {
+  position: relative;
+  display: block;
+  width: 100px;
+  height: 100px;
+  transition: 0.7s;
+}
+
+.fin-block:hover {
+  position: relative;
+  display: block;
+  border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.fin-block.block-1 {
+  background: url(../images/Index-IMG/Main/tg-img-block-1.png);
+  margin-right: 25px;
+}
+
+.fin-block.block-2 {
+  background: url(../images/Index-IMG/Main/inst-img-block-2.png);
+  margin: 0px 25px 0px 25px;
+}
+
+.fin-block.block-3 {
+  background: url(../images/Index-IMG/Main/git-img-block-3.png);
+  margin: 0px 25px 0px 25px;
+}
+
+
+
+
+.fifth-index-image {
+  position: relative;
+  margin: 0px 30px 0px 30px;
+  width: 400px;
+  height: 300px;
+  top: -50px;
+  z-index: 0;
+}
+
+.fifth-image-img {
+  position: absolute;
+  display: block;
+  width: 400px;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  z-index: 1;
+}
+
+.fifth-image-circle-1 {
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  top: 50px;
+  background: linear-gradient(to left, rgb(0, 0, 175), rgb(247, 0, 255));
+  border-radius: 70% 30% 52% 48% / 30% 65% 35% 70% ;
+  z-index: 0;
+  transition: 0.8s;
+  box-shadow: 0px 0px 15px rgb(255, 0, 255);
+}
+
+.fifth-image-circle-2 {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: 75px;
+  left: 150px;
+  background: linear-gradient(to left, rgb(0, 0, 175), rgb(255, 0, 200));
+  border-radius: 30% 70% 30% 70% / 70% 30% 70% 30% ;
+  z-index: 0;
+  transition: 0.8s;
+  box-shadow: 0px 0px 15px rgb(0, 132, 255);
+}
+
+
+
+
+
+
+@media (max-width: 1000px) {
+
+  .fifth-index-stand {
+    flex-wrap: wrap;
+    max-width: 1400px;
+    height: 500px;
+    padding: 75px 0px 75px 0px;
+  }
+
+  .fifth-index-name {
+    max-width: 600px;
+    margin: auto;
+  }
+
+  .fifth-index-image {
+    margin: auto;
+  }
+
+  .fin-block {
+    margin: auto;
+  }
+
+  .fin-name {
+    text-align: center;
+  }
+
+  .fin-block.block-1 {
+    margin: 0px 25px 0px 25px;
+  }
+}
+
+
+
+@media (max-width: 500px) {
+
+  .fifth-index-stand {
+    height: 400px;
+    padding: 75px 0px 75px 0px;
+  }
+
+  .fifth-index-name {
+    height: 150px;
+  }
+
+  .fin-name {
+    height: 50px;
+    font-size: 30px;
+  }
+
+  .fin-content {
+    width: 250px;
+    height: 50px;
+  }
+  
+  .fin-block {
+    width: 50px;
+    height: 50px;
+    transition: 0.7s;
+    margin: auto;
+  }
+
+  .fin-block.block-1 {
+    background: url(../images/Index-IMG/Main/tg-img-block-1-50px.png);
+    margin: auto;
+  }
+  
+  .fin-block.block-2 {
+    background: url(../images/Index-IMG/Main/inst-img-block-2-50px.png);
+    margin: 0px;
+    margin: auto;
+  }
+  
+  .fin-block.block-3 {
+    background: url(../images/Index-IMG/Main/git-img-block-3-50px.png);
+    margin: 0px;
+    margin: auto;
+  }
+
+
+
+
+  .fifth-index-image {
+    margin: 0px 30px 0px 30px;
+    width: 300px;
+    height: 200px;
+    top: -50px;
+    margin: auto;
+  }
+  
+  .fifth-image-img {
+    width: 300px;
+    height: 200px;
+    z-index: 1;
+  }
+  
+  .fifth-image-circle-1 {
+    width: 200px;
+    height: 200px;
+    top: 50px;
+  }
+  
+  .fifth-image-circle-2 {
+    width: 150px;
+    height: 150px;
+    top: 75px;
+    left: 150px;
+  }
+  
+}
