--- a/Vector/css/index-styles.css
+++ b/Vector/css/index-styles.css
@@ -24,7 +24,7 @@ body {
     position: fixed;
     display: flex;
     top: 0;
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(255, 255, 255);
     width: 100%;
     height: 50px;
     z-index: 2;
@@ -39,21 +39,22 @@ body {
     height: 50px;
 }
 
+
+
 .logo {
-    position: relative;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    text-align: center;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(0, 0, 0);
-    width: 120px;
-    height: 38px;
-    line-height: 35px;
-    font-size: 25px;
-    margin: 3px 3px;
-    padding: 3px 3px 3px 30px;
-    letter-spacing: 5px;
+  position: relative;
+  float: left;
+  text-align: center;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 600;
+  width: 120px;
+  height: 38px;
+  line-height: 35px;
+  font-size: 25px;
+  margin: 3px 3px;
+  padding: 3px 3px 3px 30px;
+  letter-spacing: 5px;
 }
 
 .menu-pc {
@@ -90,7 +91,7 @@ a {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: rgb(233, 233, 233);
+  background-color: rgb(255, 255, 255);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -108,7 +109,7 @@ a {
 }
 
 .dropdown-content a:hover {
-  background-color: #ceccccbb;
+  background-color: #ffffffbb;
   color: #007bff;
 }
 
@@ -123,7 +124,7 @@ a {
     color: rgb(0, 0, 0);
     line-height: 35px;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: bold;
     margin: 0 9px;
     padding: 8px;
     width: 70px;
@@ -155,8 +156,8 @@ a {
 
 .header-bottom-all {
   width: 100%;
-  height: 800px;
-  background-image: linear-gradient(to right, rgb(241, 241, 241), rgb(201, 201, 201));
+  height: 100%;
+  background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(247, 247, 247));
 
 }
 
@@ -318,6 +319,7 @@ a {
   border-radius: 189px;
   z-index: 0;
   transition: 0.8s;
+  box-shadow: 0px 0px 15px blue;
 }
 
 .header-image-circle-2 {
@@ -330,6 +332,7 @@ a {
   border-radius: 189px;
   z-index: 0;
   transition: 0.8s;
+  box-shadow: 0px 0px 15px blue;
 }
 
 
@@ -377,14 +380,24 @@ a {
 
 @media (max-width: 750px) {
 
+  .header-bottom {
+    height: 1300px;
+}
+
   .header-slogan {
+    top: 600px;
     width: 750px;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.850), rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.800),rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.750), rgba(255, 255, 255, 0.700), rgba(255, 255, 255, 0.600));
-    padding: 0px 0px 0px 20px;
+    padding: 0px 0px 0px 50px;
   }
 
   .header-image {
-    right: -40px;
+    top: -800px;
+    position: relative;
+    margin: auto;
+    float: none;
+    width: 500px;
+    height: 600px;
   }
 
   .header-slogan-name {
@@ -401,21 +414,78 @@ a {
     line-height: 35px;
   }
 
+
+  .header-image-img {
+    width: 325px;
+    height: 450px;
+    top: 80px;
+    padding-left: 50px;
+  }
+  
+  .header-image-circle-1 {
+    width: 300px;
+    height: 300px;
+    top: 250px;
+    border-radius: 189px;
+  }
+  
+  .header-image-circle-2 {
+    width: 350px;
+    height: 350px;
+    top: 150px;
+    left: 150px;
+    border-radius: 189px;
+  }
+
 }
 
 
 
 @media (max-width: 550px) {
 
+  .header-bottom {
+    height: 1000px;
+  }
+
   .header-slogan {
     width: 750px;
+    top: 400px;
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.850), rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.800),rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.800), rgba(255, 255, 255, 0.750), rgba(255, 255, 255, 0.700), rgba(255, 255, 255, 0.600));
     padding: 0px 0px 0px 20px;
   }
 
   .header-image {
-    right: -40px;
+    top: -800px;
+    margin: auto;
+    float: none;
+    width: 350px;
+    height: 450px;
   }
+
+  .header-image-img {
+    width: 250px;
+    height: 350px;
+    top: 30px;
+    padding-left: 5px;
+  }
+  
+  .header-image-circle-1 {
+    width: 200px;
+    height: 200px;
+    top: 200px;
+    border-radius: 189px;
+  }
+  
+  .header-image-circle-2 {
+    width: 250px;
+    height: 250px;
+    top: 110px;
+    left: 100px;
+    border-radius: 189px;
+  }
+
+
+
 
   .header-slogan-name {
     width: 400px;
@@ -452,11 +522,102 @@ a {
     line-height: 24px;
   }
 
-
 }
 
 
 
+
+@media (max-width: 400px) {
+
+  .header-bottom {
+    height: 650px;
+  }
+
+  .header-image {
+    top: -480px;
+    margin: auto;
+    width: 200px;
+    height: 300px;
+  }
+
+  .header-image-img {
+    display: block;
+    margin: auto;
+    width: 160px;
+    height: 210px;
+    top: 30px;
+    padding-left: 0px;
+    padding-right: 20px;
+  }
+  
+  .header-image-circle-1 {
+    width: 150px;
+    height: 150px;
+    top: 120px;
+    border-radius: 189px;
+  }
+  
+  .header-image-circle-2 {
+    width: 150px;
+    height: 150px;
+    top: 90px;
+    left: 80px;
+    border-radius: 189px;
+  }
+
+
+  
+
+  .header-slogan {
+    width: 400px;
+    height: 500px;
+    top: 300px;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0),rgba(255, 255, 255, 0), rgba(165, 26, 26, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
+    padding: 0px 0px 0px 20px;
+  }
+
+
+  .header-slogan-logo {
+    top: 25px;
+  }
+
+  .header-slogan-name {
+    width: 250px;
+    height: 75px;
+    top: 50px;
+    font-size: 22px;
+    line-height: 30px;
+  }
+
+  .header-slogan-under {
+    width: 250px;
+    height: 100px;
+    font-size: 15px;
+    line-height: 20px;
+  }
+
+  .header-slogan-link {
+    flex-wrap: wrap;
+    top: -150px;
+    width: 200px;
+    height: 70px;
+  }
+
+  .header-slogan-link-1 {
+    width: 150px;
+    height: 25px;
+    font-size: 15px;
+    line-height: 24px;
+  }
+
+  .header-slogan-link-2 {
+    margin: 0px;
+    width: 150px;
+    height: 25px;
+    font-size: 15px;
+    line-height: 24px;
+  }
+}
 
 
 
@@ -499,7 +660,7 @@ a {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
 }
 
 
@@ -844,6 +1005,32 @@ a {
 
 
 
+@media (max-width: 400px) {
+
+  .first-index-stand-name {
+    padding-bottom: 30px;
+  }
+
+  .fis-name-top {
+    font-size: 15px;
+  }
+
+  .fis-name-under {
+    font-size: 35px;
+  }
+
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -856,7 +1043,7 @@ a {
   position: relative;
   width: 100%;
   height: 750px;
-  background: #3375ec;
+  background: #1f67ec;
   background-size: cover;
   overflow: hidden;
 }
@@ -886,6 +1073,7 @@ a {
   background-size: cover;
   width: 650px;
   height: 450px;
+  box-shadow:  0px 0px 15px rgb(255, 255, 255);
   transition: 0.7s;
   
 }
@@ -1180,6 +1368,35 @@ a {
 }
 
 
+@media (max-width: 400px) {
+
+  .second-index-stand-under {
+    height: 600px;
+  }
+
+  .second-index-stand-content {
+    top: -150px;
+    height: 450px;
+    padding-left: 25px;
+    max-width: 500px;
+  }
+
+  .sis-content-name-top {
+    height: 80px;
+  }
+
+  .second-index-stand-image {
+    width: 250px;
+    height: 160px;
+    top: 450px;
+  }
+
+  .second-index-stand-image-screen {
+    width: 250px;
+    height: 160px;
+    top: 450px;
+  }
+}
 
 
 
@@ -1230,6 +1447,7 @@ a {
   padding: 15px;
   color: #0026ff;
   border-bottom: 1px solid black;
+  box-shadow: 0px 5px 5px rgb(211, 211, 211);
 }
 
 
@@ -1360,6 +1578,36 @@ a {
 
 
 
+@media (max-width: 400px) {
+
+  .third-index-all {
+    height: 500px;
+  }
+
+  .third-index-stand {
+    height: 350px;
+  }
+
+  .third-index-stand-name {
+    width: 250px;
+    font-size: 25px;
+  }
+
+
+  .third-index-stand-content {
+    width: 300px;
+    height: 300px;
+  }
+
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -1379,7 +1627,6 @@ a {
   position: relative;
   width: 100%;
   height: 650px;
-  background: blue;
   background: url(../images/nout-fon.jpg);
   background-size: cover;
   background-position: center;
@@ -1570,6 +1817,48 @@ a {
     height: 600px;
   }
 }
+
+
+
+@media (max-width: 400px) {
+
+  .fourth-index-all {
+    height: 450px;
+  }
+
+  .fourth-index-stand {
+    height: 300px;
+  }
+
+  .fois-content-about {
+    margin: auto;
+  }
+
+  .fois-content-name-top {
+    font-size: 20px;
+    height: 40px;
+    width: 250px;
+  }
+
+  .fois-content-name-under {
+    width: 250px;
+    height: 130px;
+    text-align: center;
+    padding-bottom: 10px;
+  }
+
+  .fois-content-link {
+    margin: auto;
+  }
+
+  .fourth-index-stand-content {
+    padding-left: 0px;
+    width: 250px;
+    margin: auto;
+  }
+}
+
+
 
 
 
@@ -1924,3 +2213,251 @@ a {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+/* ПЯТЫЙ СТЕНД */
+
+
+.fifth-index-all {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #1f67ec;
+  overflow: hidden;
+}
+
+.fifth-index-stand {
+  position: relative;
+  display: flex;
+  max-width: 1400px;
+  height: 250px;
+  margin: auto;
+  padding: 75px 0px 75px 0px;
+}
+
+
+.fifth-index-name {
+  position: relative;
+  margin: auto;
+  margin-left: 100px;
+  max-width: 500px;
+  height: 250px;
+  z-index: 1;
+}
+
+.fin-name {
+  position: relative;
+  max-width: 500px;
+  height: 100px;
+  font-size: 55px;
+  font-weight: bold;
+  font-family: IBM Plex Serif;
+  letter-spacing: 3px;
+  color: white;
+}
+
+.fin-content {
+  position: relative;
+  display: flex;
+  width: 450px;
+  height: 150px;
+}
+
+.fin-block {
+  position: relative;
+  display: block;
+  width: 100px;
+  height: 100px;
+  transition: 0.7s;
+}
+
+.fin-block:hover {
+  position: relative;
+  display: block;
+  border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.fin-block.block-1 {
+  background: url(../images/Index-IMG/Main/tg-img-block-1.png);
+  margin-right: 25px;
+}
+
+.fin-block.block-2 {
+  background: url(../images/Index-IMG/Main/inst-img-block-2.png);
+  margin: 0px 25px 0px 25px;
+}
+
+.fin-block.block-3 {
+  background: url(../images/Index-IMG/Main/git-img-block-3.png);
+  margin: 0px 25px 0px 25px;
+}
+
+
+
+
+.fifth-index-image {
+  position: relative;
+  margin: auto;
+  width: 400px;
+  height: 300px;
+  top: -50px;
+  z-index: 0;
+}
+
+.fifth-image-img {
+  position: absolute;
+  display: block;
+  width: 400px;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  z-index: 1;
+}
+
+.fifth-image-circle-1 {
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  top: 50px;
+  background: linear-gradient(to left, rgb(0, 0, 175), rgb(247, 0, 255));
+  border-radius: 70% 30% 52% 48% / 30% 65% 35% 70% ;
+  z-index: 0;
+  transition: 0.8s;
+  box-shadow: 0px 0px 15px rgb(255, 0, 255);
+}
+
+.fifth-image-circle-2 {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: 75px;
+  left: 150px;
+  background: linear-gradient(to left, rgb(0, 0, 175), rgb(255, 0, 200));
+  border-radius: 30% 70% 30% 70% / 70% 30% 70% 30% ;
+  z-index: 0;
+  transition: 0.8s;
+  box-shadow: 0px 0px 15px rgb(0, 132, 255);
+}
+
+
+
+
+
+
+@media (max-width: 1000px) {
+
+  .fifth-index-stand {
+    flex-wrap: wrap;
+    max-width: 1400px;
+    height: 500px;
+    padding: 75px 0px 75px 0px;
+  }
+
+  .fifth-index-name {
+    max-width: 600px;
+    margin: auto;
+  }
+
+  .fifth-index-image {
+    margin: auto;
+  }
+
+  .fin-block {
+    margin: auto;
+  }
+
+  .fin-name {
+    text-align: center;
+  }
+
+  .fin-block.block-1 {
+    margin: 0px 25px 0px 25px;
+  }
+}
+
+
+
+@media (max-width: 500px) {
+
+  .fifth-index-stand {
+    height: 400px;
+    padding: 75px 0px 75px 0px;
+  }
+
+  .fifth-index-name {
+    height: 150px;
+  }
+
+  .fin-name {
+    height: 50px;
+    font-size: 30px;
+  }
+
+  .fin-content {
+    width: 250px;
+    height: 50px;
+  }
+  
+  .fin-block {
+    width: 50px;
+    height: 50px;
+    transition: 0.7s;
+    margin: auto;
+  }
+
+  .fin-block.block-1 {
+    background: url(../images/Index-IMG/Main/tg-img-block-1-50px.png);
+    margin: auto;
+  }
+  
+  .fin-block.block-2 {
+    background: url(../images/Index-IMG/Main/inst-img-block-2-50px.png);
+    margin: 0px;
+    margin: auto;
+  }
+  
+  .fin-block.block-3 {
+    background: url(../images/Index-IMG/Main/git-img-block-3-50px.png);
+    margin: 0px;
+    margin: auto;
+  }
+
+
+
+
+  .fifth-index-image {
+    margin: 0px 30px 0px 30px;
+    width: 300px;
+    height: 200px;
+    top: -50px;
+    margin: auto;
+  }
+  
+  .fifth-image-img {
+    width: 300px;
+    height: 200px;
+    z-index: 1;
+  }
+  
+  .fifth-image-circle-1 {
+    width: 200px;
+    height: 200px;
+    top: 50px;
+  }
+  
+  .fifth-image-circle-2 {
+    width: 150px;
+    height: 150px;
+    top: 75px;
+    left: 150px;
+  }
+  
+}
