--- a/test/css/index-styles.css
+++ b/test/css/index-styles.css
@@ -39,21 +39,22 @@ body {
     height: 50px;
 }
 
+
+
 .logo {
-    position: relative;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(0, 0, 0);
-    width: 120px;
-    height: 38px;
-    line-height: 35px;
-    font-size: 25px;
-    margin: 3px 3px;
-    padding: 3px 3px 3px 30px;
-    letter-spacing: 2px;
+  position: relative;
+  float: left;
+  text-align: center;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 600;
+  width: 120px;
+  height: 38px;
+  line-height: 35px;
+  font-size: 25px;
+  margin: 3px 3px;
+  padding: 3px 3px 3px 30px;
+  letter-spacing: 5px;
 }
 
 .menu-pc {
