--- a/test/css/index-styles.css
+++ b/test/css/index-styles.css
@@ -1625,8 +1625,9 @@ a {
 
 .fourth-index-all {
   position: relative;
-  width: 100%;
+  max-width: 1400px;
   height: 650px;
+  margin: auto;
   background: url(../images/nout-fon.jpg);
   background-size: cover;
   background-position: center;
@@ -1638,7 +1639,7 @@ a {
   position: relative;
   max-width: 1400px;
   height: 500px;
-  background-image: linear-gradient(to right, rgba(109, 109, 109, 0.7), rgba(109, 109, 109, 0.6), rgba(109, 109, 109, 0.5), rgba(128, 128, 128, 0));
+  background-image: linear-gradient(to right, rgba(0, 47, 255, 0.7), rgba(0, 38, 255, 0.6), rgba(0, 34, 255, 0.5), rgba(128, 128, 128, 0));
   margin: auto;
   padding: 75px 0px 75px 0px;
 }
@@ -1737,7 +1738,7 @@ a {
     position: relative;
     max-width: 1400px;
     height: 500px;
-    background: rgba(109, 109, 109, 0.7);
+    background: rgba(0, 68, 255, 0.7);
   }
 
   .fourth-index-stand-content {
@@ -1771,7 +1772,7 @@ a {
     position: relative;
     max-width: 1400px;
     height: 500px;
-    background: rgba(109, 109, 109, 0.7);
+    background: rgba(0, 68, 255, 0.7);
   }
 
   .fourth-index-stand-content {
